[package]
name = "http-server"
version = "0.1.0"
authors = ["JackThomson2 <jackathomson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
dashmap = "3.7"
snmalloc-rs = "0.2"
mime_guess = "2.0"
colored = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.3"

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"